# securitylayer

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  aead.cpp  aead.hpp  aeadalgorithm.cpp  aeadalgorithm.hpp  applicationlayer.hpp  associationbuilder.cpp  associationbuilder.hpp  config.h  config.hpp  encryptionalgorithm.hpp  exceptions.cpp  exceptions.hpp  gen_profiles.pl  hash.hpp  hmac.cpp  hmac.hpp  iencryption.hpp  keywrapalgorithm.hpp  less.cpp  macalgorithm.cpp  macalgorithm.hpp  master.cpp  master.hpp  messages.hpp  outstation.cpp  outstation.hpp  profile.hpp  securitylayer.cpp  securitylayer.hpp  session.cpp  session.hpp  sessionbuilder.cpp  sessionbuilder.hpp  statistics.hpp  (+3 more)
.github/workflows/: ci.yml
details/: aeadhmacadapter.hpp  aes256cbcencryption.cpp  aes256cbcencryption.hpp  aesgcm.cpp  aesgcm.hpp  certificate.cpp  certificate.hpp  certificatesignrequest.cpp  certificatesignrequest.hpp  certificatestore.cpp  certificatestore.hpp  constants.hpp  direction.hpp  distinguishedname.cpp  distinguishedname.hpp  distinguishednameparser.cpp  distinguishednameparser.hpp  ecdh.cpp  ecdh.hpp  ecdhpublickey.cpp  ecdhpublickey.hpp  hkdf.cpp  hkdf.hpp  hmac.cpp  hmac.hpp  hmacaeadadapter.hpp  hmacblake2s.cpp  hmacblake2s.hpp  hmacsha256.cpp  hmacsha256.hpp  hmacsha3256.cpp  hmacsha3256.hpp  iaead.hpp  icertificatestore.cpp  icertificatestore.hpp  ihmac.hpp  ikeywrap.hpp  intermediatebufferadapter.cpp  intermediatebufferadapter.hpp  irandomnumbergenerator.hpp  (+15 more)
messages/: associationinitiation.hpp  associationrequest.hpp  associationresponse.hpp  authenticatedapdu.hpp  enrollmentconfirmation.hpp  enrollmentinitiation.hpp  enrollmentrequest.hpp  enrollmentresponse.hpp  error.hpp  keystatus.hpp  requestsessioninitiation.hpp  securemessage.hpp  sessionconfirmation.hpp  sessioninitiation.hpp  sessionkeychangerequest.hpp  sessionkeychangeresponse.hpp  sessionstartrequest.hpp  sessionstartresponse.hpp  setsessionkeys.hpp  updatekeychangerequest.hpp  updatekeychangeresponse.hpp  wrappedkeydata.cpp  wrappedkeydata.hpp
tests/: aesgcm.test.cpp  cert.pem  certificatestorestub.cpp  certificatestorestub.hpp  certs.test.cpp  certstore.test.cpp  deterministicrandomnumbergenerator.cpp  deterministicrandomnumbergenerator.hpp  distinguishednameparser.test.cpp  ecdhkey.pem  eckey.pem  encryption.test.cpp  enrollment.test.cpp  exchange.cpp  exchange.test.cpp  gencerts.cpp  hmacsha256.test.cpp  intermediatebufferadapter.test.cpp  main.cpp  master.cpp  master.test.cpp  openssl.cnf  outstation.cpp  outstation.test.cpp  pbkdf2.test.cpp  seq.test.cpp  session.test.cpp  sessionrestart.test.cpp  updatekeystorestub.cpp  updatekeystorestub.hpp
